@@ -4,7 +4,7 @@ sqitch-engine-usage - Sqitch engine usage statement
 
 =head1 Usage
 
-  sqitch engine
+  sqitch [options] engine
   sqitch engine add <name> [-s <property>=<value> ...]
   sqitch engine set-target <name> <target>
   sqitch engine set-registry <name> <registry>
