@@ -4,7 +4,7 @@ sqitch-help-usage - Sqitch help usage statement
 
 =head1 Usage
 
-  sqitch help [--guide] [command]
+  sqitch help [--guide] [<command>] [<guide>]
 
 =head1 Options
 
