@@ -4,7 +4,7 @@ sqitch-plan-usage - Sqitch plan usage statement
 
 =head1 Usage
 
-  sqitch [<db-options>] plan [<options>]
+  sqitch [options] plan [plan options]
 
 =head1 Options
 
