@@ -21,8 +21,8 @@ plan than the currently-deployed state, an error will be returned, along with
 a suggestion to instead use L<sqitch-deploy>.
 
 The C<< <database> >> parameter specifies the database to which to connect,
-and may also be specified as the C<--target> option. It can be either a URI or
-the name of a target in the configuration.
+and may also be specified as the C<--target> option. It can be target name,
+a URI, an engine name, or plan file path.
 
 =head1 Options
 
