@@ -4,6 +4,7 @@ sqitch-target-usage - Sqitch target usage statement
 
 =head1 Usage
 
+  sqitch [options] target
   sqitch target [-v | --verbose]
   sqitch target add <name> <uri> [-s <property>=<value> ...]
   sqitch target set-uri <name> <newuri>
