@@ -4,7 +4,7 @@ sqitch-upgrade-usage - Sqitch upgrade usage statement
 
 =head1 Usage
 
-  sqitch [<db-options>] upgrade [<options>] [<database>]
+  sqitch [options] upgrade [upgrade options] [<database>]
 
 =head1 Options
 
