@@ -39,8 +39,8 @@ Passes its verify test, if one exists and the change has not been reworked.
 =back
 
 The C<< <database> >> parameter specifies the database to which to connect,
-and may also be specified as the C<--target> option. It can be either a URI or
-the name of a target in the configuration.
+and may also be specified as the C<--target> option. It can be target name,
+a URI, an engine name, or plan file path.
 
 Verify tests are scripts that may be associated with each change. If a change
 has no verify script, a warning is emitted, but it is not considered a
