@@ -48,6 +48,8 @@ Revision history for Perl extension App::Sqitch
      - Pass engine names, target names, or plan file names to the `bundle`
        command to limit the bundle to the plans for those engines, targets,
        and plans.
+     - All commands that take target arguments can now specify them as engine
+       names or plan file paths as well as target names and URIs.
 
 0.999  2015-02-12T19:43:45Z
      - Improved MySQL missing table error detection by relying on error codes
